# waifu

./: Cargo.toml  README.md
src/: app.rs
src/api/: danbooru.rs  mod.rs  safebooru.rs
